# worker-template

./: .dockerignore  .doit.db  .gitignore  README.md  _doit  command.py  main.py  pyproject.toml
config/: base.py  dev.py  prod.py  staging.py
tasks/: __init__.py  task.py
