[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["rede <rede@soberdev.com>"]
readme = "README.md"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
ipython = "^8.7.0"
pre-commit = "^2.21.0"
poethepoet = "^0.17.1"
autopep8 = "^2.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-sugar = "^0.9.6"
pytest-mock = "^3.10.0"
[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.2.7"}
pydantic = "^1.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
